# Ohedo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Ohedo/: CMakeLists.txt
Ohedo/Ohedo/: Ohedo.c  Ohedo.h
Ohedo/Ohedo/Entity/: Components.h  Entity.c  Entity.h  Scene.c  Scene.h
Ohedo/Ohedo/Graphics/: BatchRenderer.c  BatchRenderer.h  IndexBuffer.c  IndexBuffer.h  Material.c  Material.h  Mesh.c  Mesh.h  RenderCommand.c  RenderCommand.h  Shader.c  Shader.h  Texture2D.c  Texture2D.h  VertexArray.c  VertexArray.h  VertexBuffer.c  VertexBuffer.h
Ohedo/Ohedo/Graphics/UI/: Font.c  Font.h  FontRenderer.c  TextRenderer.h
Ohedo/Ohedo/Maths/: Mat4.c  Mat4.h  Noise.c  Noise.h  Vec2.c  Vec2.h  Vec3.c  Vec3.h  Vec4.c  Vec4.h
Ohedo/Ohedo/Utils/: Input.c  Input.h  InputCodes.h  Timer.c  Timer.h  Types.h  Window.c  Window.h
examples/: BatchRendering.c  CMakeLists.txt  ECS.c  MeshAndInput.c  MeshLoading.c  PBR.c  TextRendering.c  triangle.c
examples/assets/models/: Cerberus.gltf  DamagedHelmet.gltf
examples/shaders/: fragment.frag  vertex.vert
examples/shaders/mesh/: fragment.frag  vertex.vert
examples/shaders/pbr/: fragment.frag  vertex.vert
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
scripts/: build.bat
